--- a/my_proj/index.html
+++ b/my_proj/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>ГДЗ: готовые домашние задания</title>
+    <title>SkillUp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,16 +12,19 @@
     <div class="container header-inner">
 
         <div class="logo">
-            <a href="#">GDZ<span>.RU</span></a>
+            <a href="#">SkillUp<span>.ru</span></a>
         </div>
 
-        <form class="search-form">
+        <!-- <form class="search-form">
             <input type="text" placeholder="Найти учебник, автора или предмет…">
             <button type="submit">Найти</button>
-        </form>
+        </form> -->
 
         <div class="auth">
             <a href="#">Войти</a>
+        </div>
+        <div class="register">
+            <a href="#">Зарегистрироваться</a>
         </div>
 
     </div>
@@ -35,18 +38,13 @@
             <!-- HERO -->
             <section class="hero card">
                 <div class="hero-text">
-                    <h1>ГДЗ: готовые домашние задания за 1–11 класс</h1>
-
-                    <p>
-                        Найди решебники по всем основным предметам: математика, алгебра, геометрия,
-                        русский и иностранные языки, физика, химия, история, география и многое другое.
-                    </p>
+                    <h1><span class="brand">SkillUp</span> - прокачай свои скиллы в предметах, помоги другим, получай баллы и раскрашивай профиль!</h1>
 
                     <p class="hero-note">
-                        Пользуйся ГДЗ, чтобы проверять себя, разбирать сложные задания и экономить время.
+                        Пользуйся SkillUp, чтобы проверять себя, разбирать сложные задания и экономить время.
                     </p>
 
-                    <!-- кнопки удалены -->
+
                 </div>
             </section>
 
@@ -87,21 +85,15 @@
 
             <!-- О СЕРВИСЕ -->
             <section class="about card">
-                <h2>О сервисе ГДЗ</h2>
+                <h2>О сервисе SkillUp</h2>
 
                 <p>
-                    В базе собраны тысячи учебных изданий с решениями и пояснениями. По каждому
-                    заданию можно увидеть готовый ответ и шаги решения.
-                </p>
-
-                <p>
-                    Грамотное использование ГДЗ — это не списывание, а проверка своих решений и анализ ошибок.
+                    SkillUp - проверка своих решений и анализ ошибок.
                 </p>
 
                 <ul class="about-list">
-                    <li>Быстрая самопроверка домашних заданий.</li>
                     <li>Разбор сложных тем.</li>
-                    <li>Удобно родителям, репетиторам и учителям.</li>
+                    <li>Удобно родителям, ученикам и учителям.</li>
                 </ul>
             </section>
 
@@ -114,8 +106,8 @@
     <div class="container footer-inner">
 
         <div class="footer-left">
-            <div class="logo footer-logo"><a href="#">GDZ<span>.RU</span></a></div>
-            <p class="footer-copy">© 2025 Готовые домашние задания.</p>
+            <div class="logo footer-logo"><a href="#">SkillUp<span>.ru</span></a></div>
+            <p class="footer-copy">© 2025 SkillUp.</p>
         </div>
 
         <nav class="footer-nav">
