--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>SkillUp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="images/SkillUpSquare.png">
 </head>
 <body>
 
@@ -12,7 +13,10 @@
     <div class="container header-inner">
 
         <div class="logo">
-            <a href="#">SkillUp<span>.ru</span></a>
+            <a href="#">
+                <img src="images/SkillUpSquare.png" alt="SkillUp logo" class="logo-img">
+                <span class="brand-text">SkillUp<span>.ru</span></span>
+            </a>
         </div>
 
         <!-- <form class="search-form">
