added login system, update ui, major update

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
         </form> -->
 
         <div class="auth">
-            <a href="#">Войти</a>
-        </div>
-        <div class="register">
-            <a href="#">Зарегистрироваться</a>
+            <a href="login.html">Войти</a>
         </div>
 
     </div>
@@ -52,40 +49,77 @@
                 </div>
             </section>
 
+
+            <!-- Requests / Popular two-column row -->
+        </section>
             <!-- ПРЕДМЕТЫ -->
             <section class="classes card">
-                <h2>Выберите предмет</h2>
+                <h2>Популярные запросы 🔥</h2>
 
-                <div class="class-grid">
+                <div class="class-grid class-table">
 
-                    <a href="#" class="class-card"><div class="class-number">Математика</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Алгебра</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Геометрия</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Русский язык</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Иностранный язык</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Информатика</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Биология</div></a>
-                    <a href="#" class="class-card"><div class="class-number">География</div></a>
-                    <a href="#" class="class-card"><div class="class-number">История</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Обществознание</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Физика</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Химия</div></a>
-                    <a href="#" class="class-card"><div class="class-number">Литература</div></a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Математика</div>
+                        <div class="class-meta">14 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Алгебра</div>
+                        <div class="class-meta">9 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Геометрия</div>
+                        <div class="class-meta">11 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Русский язык</div>
+                        <div class="class-meta">8 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Иностранный язык</div>
+                        <div class="class-meta">12 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Информатика</div>
+                        <div class="class-meta">7 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Биология</div>
+                        <div class="class-meta">6 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">География</div>
+                        <div class="class-meta">5 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">История</div>
+                        <div class="class-meta">10 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Обществознание</div>
+                        <div class="class-meta">4 занятия</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Физика</div>
+                        <div class="class-meta">13 занятий</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Химия</div>
+                        <div class="class-meta">3 занятия</div>
+                    </a>
+                    <a href="#" class="class-card">
+                        <div class="class-title">Литература</div>
+                        <div class="class-meta">2 занятия</div>
+                    </a>
+                    <a href="all-requests.html" class="class-card class-card--primary">
+                        <div class="class-title">Не нашли то, что искали?</div>
+                        <div class="class-meta">Посмотреть все запросы</div>
+                    </a>
+
 
                 </div>
             </section>
 
-            <!-- ПОПУЛЯРНОЕ -->
-            <section class="popular card">
-                <h2>Популярные запросы</h2>
-                <ul class="popular-list">
-                    <li><a href="#">ГДЗ по математике за 6 класс Виленкин</a></li>
-                    <li><a href="#">ГДЗ по геометрии 7–9 класс Атанасян</a></li>
-                    <li><a href="#">ГДЗ по алгебре за 7 класс Макарычев</a></li>
-                    <li><a href="#">ГДЗ по русскому языку за 6 класс</a></li>
-                    <li><a href="#">ГДЗ по английскому языку за 9 класс</a></li>
-                </ul>
-            </section>
+            <!-- (popular moved above into two-column requests row) -->
 
             <!-- О СЕРВИСЕ -->
             <section class="about card">
@@ -123,6 +157,6 @@
 
     </div>
 </footer>
-
+    <script src="scripts.js"></script>
 </body>
 </html>
