reset to working version, use cache

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
             <!-- ПРЕДМЕТЫ -->
             <section class="classes card">
-                <h2>Популярные запросы 🔥</h2>
+                <h2>Популярные запросы</h2>
 
                 <div class="class-grid class-table">
 
