--- a/index.html
+++ b/index.html
@@ -58,55 +58,55 @@
 
                 <div class="class-grid class-table">
 
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Математика" class="class-card">
                         <div class="class-title">Математика</div>
                         <div class="class-meta">14 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Алгебра" class="class-card">
                         <div class="class-title">Алгебра</div>
                         <div class="class-meta">9 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Геометрия" class="class-card">
                         <div class="class-title">Геометрия</div>
                         <div class="class-meta">11 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Русский%20язык" class="class-card">
                         <div class="class-title">Русский язык</div>
                         <div class="class-meta">8 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Иностранный%20язык" class="class-card">
                         <div class="class-title">Иностранный язык</div>
                         <div class="class-meta">12 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Информатика" class="class-card">
                         <div class="class-title">Информатика</div>
                         <div class="class-meta">7 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Биология" class="class-card">
                         <div class="class-title">Биология</div>
                         <div class="class-meta">6 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=География" class="class-card">
                         <div class="class-title">География</div>
                         <div class="class-meta">5 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=История" class="class-card">
                         <div class="class-title">История</div>
                         <div class="class-meta">10 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Обществознание" class="class-card">
                         <div class="class-title">Обществознание</div>
                         <div class="class-meta">4 занятия</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Физика" class="class-card">
                         <div class="class-title">Физика</div>
                         <div class="class-meta">13 занятий</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Химия" class="class-card">
                         <div class="class-title">Химия</div>
                         <div class="class-meta">3 занятия</div>
                     </a>
-                    <a href="#" class="class-card">
+                    <a href="all-requests.html?subject=Литература" class="class-card">
                         <div class="class-title">Литература</div>
                         <div class="class-meta">2 занятия</div>
                     </a>
