major update, requests system added

--- a/all-requests.html
+++ b/all-requests.html
@@ -28,7 +28,7 @@
         <section class="card" style="margin:18px 0">
             <h2>Все запросы</h2>
 
-            <div class="class-grid" style="margin-top:12px; display:flex; flex-wrap:wrap; gap:8px">
+            <div class="class-grid" style="margin-top:24px; display:flex; flex-wrap:wrap; gap:8px">
                 <a href="#" data-subject="Математика" class="class-card">Математика</a>
                 <a href="#" data-subject="Алгебра" class="class-card">Алгебра</a>
                 <a href="#" data-subject="Геометрия" class="class-card">Геометрия</a>
@@ -42,14 +42,11 @@
                 <a href="#" data-subject="Физика" class="class-card">Физика</a>
                 <a href="#" data-subject="Химия" class="class-card">Химия</a>
                 <a href="#" data-subject="Литература" class="class-card">Литература</a>
+                <a href="create-request.html" class="class-card class-card--primary" style="display:inline-block;text-align:center;">
+                    <div class="class-title">Создать запрос</div>
+                    <!-- <div class="class-meta">Добавить новый запрос на помощь</div> -->
+                </a>
             </div>
-
-            <form id="requestForm" style="margin-top:12px;display:grid;gap:10px;max-width:780px">
-                <input id="reqTitle" placeholder="Краткий заголовок запроса" required style="padding:10px;border-radius:8px;border:1px solid #e5e7eb">
-                <div>
-                    <button type="submit" class="btn-create">Создать запрос</button>
-                </div>
-            </form>
 
             <hr style="margin:18px 0;border:none;border-top:1px solid #eef2f7">
 
