--- a/index.html
+++ b/index.html
@@ -58,65 +58,71 @@
 
                 <div class="class-grid class-table">
 
-                    <a href="all-requests.html?subject=Математика" class="class-card">
+                    <a href="#" data-subject="Математика" class="class-card">
                         <div class="class-title">Математика</div>
                         <div class="class-meta">14 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=Алгебра" class="class-card">
+                    <a href="#" data-subject="Алгебра" class="class-card">
                         <div class="class-title">Алгебра</div>
                         <div class="class-meta">9 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=Геометрия" class="class-card">
+                    <a href="#" data-subject="Геометрия" class="class-card">
                         <div class="class-title">Геометрия</div>
                         <div class="class-meta">11 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=Русский%20язык" class="class-card">
+                    <a href="#" data-subject="Русский язык" class="class-card">
                         <div class="class-title">Русский язык</div>
                         <div class="class-meta">8 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=Иностранный%20язык" class="class-card">
+                    <a href="#" data-subject="Иностранный язык" class="class-card">
                         <div class="class-title">Иностранный язык</div>
                         <div class="class-meta">12 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=Информатика" class="class-card">
+                    <a href="#" data-subject="Информатика" class="class-card">
                         <div class="class-title">Информатика</div>
                         <div class="class-meta">7 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=Биология" class="class-card">
+                    <a href="#" data-subject="Биология" class="class-card">
                         <div class="class-title">Биология</div>
                         <div class="class-meta">6 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=География" class="class-card">
+                    <a href="#" data-subject="География" class="class-card">
                         <div class="class-title">География</div>
                         <div class="class-meta">5 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=История" class="class-card">
+                    <a href="#" data-subject="История" class="class-card">
                         <div class="class-title">История</div>
                         <div class="class-meta">10 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=Обществознание" class="class-card">
+                    <a href="#" data-subject="Обществознание" class="class-card">
                         <div class="class-title">Обществознание</div>
                         <div class="class-meta">4 занятия</div>
                     </a>
-                    <a href="all-requests.html?subject=Физика" class="class-card">
+                    <a href="#" data-subject="Физика" class="class-card">
                         <div class="class-title">Физика</div>
                         <div class="class-meta">13 занятий</div>
                     </a>
-                    <a href="all-requests.html?subject=Химия" class="class-card">
+                    <a href="#" data-subject="Химия" class="class-card">
                         <div class="class-title">Химия</div>
                         <div class="class-meta">3 занятия</div>
                     </a>
-                    <a href="all-requests.html?subject=Литература" class="class-card">
+                    <a href="#" data-subject="Литература" class="class-card">
                         <div class="class-title">Литература</div>
                         <div class="class-meta">2 занятия</div>
                     </a>
-                    <a href="all-requests.html" class="class-card class-card--primary">
-                        <div class="class-title">Не нашли то, что искали?</div>
-                        <div class="class-meta">Посмотреть все запросы</div>
+                    <a href="create-request.html" class="class-card class-card--primary">
+                        <div class="class-title">Создать запрос</div>
+                        <!-- <div class="class-meta">Посмотреть все запросы</div> -->
                     </a>
 
 
                 </div>
+            </section>
+
+            <!-- Requests moved from all-requests: -->
+            <section class="card" style="margin-top:18px">
+                <h2>Запросы</h2>
+                <div id="requestsList" style="display:grid;gap:12px"></div>
             </section>
 
             <!-- (popular moved above into two-column requests row) -->
