--- a/index.html
+++ b/index.html
@@ -60,59 +60,58 @@
 
                     <a href="#" data-subject="Математика" class="class-card">
                         <div class="class-title">Математика</div>
-                        <div class="class-meta">14 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Алгебра" class="class-card">
                         <div class="class-title">Алгебра</div>
-                        <div class="class-meta">9 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Геометрия" class="class-card">
                         <div class="class-title">Геометрия</div>
-                        <div class="class-meta">11 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Русский язык" class="class-card">
                         <div class="class-title">Русский язык</div>
-                        <div class="class-meta">8 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Иностранный язык" class="class-card">
                         <div class="class-title">Иностранный язык</div>
-                        <div class="class-meta">12 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Информатика" class="class-card">
                         <div class="class-title">Информатика</div>
-                        <div class="class-meta">7 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Биология" class="class-card">
                         <div class="class-title">Биология</div>
-                        <div class="class-meta">6 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="География" class="class-card">
                         <div class="class-title">География</div>
-                        <div class="class-meta">5 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="История" class="class-card">
                         <div class="class-title">История</div>
-                        <div class="class-meta">10 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Обществознание" class="class-card">
                         <div class="class-title">Обществознание</div>
-                        <div class="class-meta">4 занятия</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Физика" class="class-card">
                         <div class="class-title">Физика</div>
-                        <div class="class-meta">13 занятий</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Химия" class="class-card">
                         <div class="class-title">Химия</div>
-                        <div class="class-meta">3 занятия</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="#" data-subject="Литература" class="class-card">
                         <div class="class-title">Литература</div>
-                        <div class="class-meta">2 занятия</div>
+                        <div class="class-meta"><span class="class-count">0</span> занятий</div>
                     </a>
                     <a href="create-request.html" class="class-card class-card--primary">
-                        <div class="class-title">Создать запрос</div>
-                        <!-- <div class="class-meta">Посмотреть все запросы</div> -->
+                        <div class="class-title">Создать заявку</div>
                     </a>
 
 
